--- a/layout.jade
+++ b/layout.jade
@@ -4,7 +4,7 @@ html
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
-    title=title ? title + ' - KitTorrent' : 'KitTorrent'
+    title=title ? title + ' - App' : 'App'
     block css
       //link(href='/bundle.css' rel='stylesheet')
   body(class=bodyClass)
