--- a/layout.jade
+++ b/layout.jade
@@ -8,6 +8,7 @@ html
     block css
       //link(href='/bundle.css' rel='stylesheet')
   body(class=bodyClass)
-    block content
+    div#content
+      block content
     block js
       script(src='/bundle.js')
